Build initial html framework

--- a/index.html
+++ b/index.html
@@ -6,6 +6,63 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <div class="header">
+      <div class="text">Header Logo</div>
+      <div class="links">
+        <a href="page-one.html">Link One</a>
+        <a href="page-two.html">Link Two</a>
+        <a href="page-three.html">Link Three</a>
+      </div>
+    </div>
+    <div class="first">
+        <section class="main">
+            <div class="left">
+                <div>Hero Main Text</div>
+                <div>Secondary Text</div>
+                <a href="signup.html">SIGN UP</a>
+            </div>
+            <div class="right">
+                <img src="images/water.jpg" alt="Fisherman on the Water">
+            </div>
+        </section>
+    </div>
+    <div class="second">
+        <div>Some Random Information</div>
+        <div class="items">
+            <div class="item-one">
+                <img src="images/bird.jpg" alt="Bird">
+                <div>Random Text</div>
+            </div>
+            <div class="item-two">
+                <img src="images/bird-two.jpg" alt="Second Bird">
+                <div>Random Text</div>
+            </div>
+            <div class="item-three">
+                <img src="images/flower.jpg" alt="Sunflower">
+                <div>Random Text</div>
+            </div>
+            <div class="item-four">
+                <img src="images/wheat.jpg" alt="Wheat in Wind">
+                <div>Random Text</div>
+            </div>
+        </div>
+    </div>
+    <div class="third">
+        <div class="rows">
+          <div class="top">TEXT</div>
+          <div class="bottom">text</div>
+        </div>
+    <div class="fourth">
+        <div class="left">
+            <div class="top-text">TEXT</div>
+            <div class="bottom-text">text</div>
+        </div>
+        <div class="right">
+            <a href="signup.html">SIGN UP</a>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="only-text">TEXT</div>
+    </div>
 </body>
 </html>
