Fix improper indentation on main body header -m make signup button a child to parent div in div class fourth

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="header">
+    <div class="header">
       <div class="text">Header Logo</div>
       <div class="links">
         <a href="page-one.html">Link One</a>
@@ -17,8 +18,8 @@
     <div class="first">
         <section class="main">
             <div class="left">
-                <div>Hero Main Text</div>
-                <div>Secondary Text</div>
+                <div class="text">Hero Main Text</div>
+                <div class="text-two">Secondary Text</div>
                 <a href="signup.html">SIGN UP</a>
             </div>
             <div class="right">
@@ -27,24 +28,16 @@
         </section>
     </div>
     <div class="second">
-        <div>Some Random Information</div>
+        <div class="header">Some Random Information</div>
         <div class="items">
-            <div class="item-one">
-                <img src="images/bird.jpg" alt="Bird">
-                <div>Random Text</div>
-            </div>
-            <div class="item-two">
-                <img src="images/bird-two.jpg" alt="Second Bird">
-                <div>Random Text</div>
-            </div>
-            <div class="item-three">
-                <img src="images/flower.jpg" alt="Sunflower">
-                <div>Random Text</div>
-            </div>
-            <div class="item-four">
-                <img src="images/wheat.jpg" alt="Wheat in Wind">
-                <div>Random Text</div>
-            </div>
+            <button class="item-one">Click Me!</button>
+                <div class="words">TEXT</div>
+            <button class="item-two">Or Me!</button>
+                <div class="words">TEXT</div>
+            <button class="item-three">Me Too!</button>
+                <div class="words">TEXT</div>
+            <button class="item-four">Me Three!</button>
+                <div class="words">TEXT</div>
         </div>
     </div>
     <div class="third">
