--- a/index.html
+++ b/index.html
@@ -30,21 +30,30 @@
     <div class="second">
         <div class="header">Some Random Information</div>
         <div class="items">
-            <button class="item-one">Click Me!</button>
-                <div class="words">TEXT</div>
-            <button class="item-two">Or Me!</button>
-                <div class="words">TEXT</div>
-            <button class="item-three">Me Too!</button>
-                <div class="words">TEXT</div>
-            <button class="item-four">Me Three!</button>
-                <div class="words">TEXT</div>
+            <div class="item-one">
+              <button class="one">Click Me!</button>
+              <div class="words">TEXT</div>
+            </div>
+            <div class="item-two">
+              <button class="two">Or Me!</button>
+              <div class="words">TEXT</div>
+            </div>
+            <div class="item-three">
+              <button class="three">Me Too!</button>
+              <div class="words">TEXT</div>
+            </div>
+            <div class="item-four">
+              <button class="four">Me Three!</button>
+              <div class="words">TEXT</div>
+              </div>
         </div>
     </div>
     <div class="third">
         <div class="rows">
           <div class="top">TEXT</div>
           <div class="bottom">text</div>
-        </div>
+          </div>
+    </div>
     <div class="fourth">
         <div class="left">
             <div class="top-text">TEXT</div>
