--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         </section>
     </div>
     <div class="second">
-        <div class="header">Some Random Information</div>
-        <div class="items">
+        <div class="row-one">
+          <div class="header">Some Random Information</div>
+        </div>
+        <div class="row-two">
+          <div class="items">
             <div class="item-one">
               <button class="one">Click Me!</button>
               <div class="words">TEXT</div>
@@ -46,6 +49,7 @@
               <button class="four">Me Three!</button>
               <div class="words">TEXT</div>
               </div>
+          </div>
         </div>
     </div>
     <div class="third">
