--- a/index.html
+++ b/index.html
@@ -32,28 +32,15 @@
           <div class="header">Some Random Information</div>
         </div>
         <div class="row-two">
-            <div class="items">
-                <div class="item-one">
-                    <button class="one">Click Me!
-                        <div class="words">TEXT</div>
-                    </button>
-                </div>
-            </div>
-            <div class="item-two">
-                <button class="two">Or Me!
-                    <div class="words">TEXT</div>
-                </button>
-            </div>
-            <div class="item-three">
-                <button class="three">Me Too!
-                    <div class="words">TEXT</div>
-                </button>
-            </div>
-            <div class="item-four">
-                <button class="four">Me Three!
-                    <div class="words">TEXT</div>
-                </button>
-            </div>
+            <button class="one">Click Me!></button>
+            <button class="two">Or Me!></button>
+            <button class="three">Me Too!></button>
+            <button class="four">Me Three!></button>
+        <div class="row-three">
+            <div class="words">TEXT</div>
+            <div class="words">TEXT</div>
+            <div class="words">TEXT</div>
+            <div class="words">TEXT</div>
         </div>
     </div>
     <div class="third">
