--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <div class="first">
         <section class="main">
             <div class="left">
-                <div class="text">Hero Main Text</div>
-                <div class="text-two">Secondary Text</div>
-                <a href="signup.html">SIGN UP</a>
+                <div class="text">This website is awesome</div>
+                <div class="text-two">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+                <a href="signup.html">
+                  <button>SIGN UP</button>
+                </a>
             </div>
             <div class="right">
                 <img src="images/water.jpg" alt="Fisherman on the Water">
@@ -32,34 +34,37 @@
           <div class="header">Some Random Information</div>
         </div>
         <div class="row-two">
-            <button class="one">Click Me!></button>
-            <button class="two">Or Me!></button>
-            <button class="three">Me Too!></button>
-            <button class="four">Me Three!></button>
+            <button class="one"></button>
+            <button class="two"></button>
+            <button class="three"></button>
+            <button class="four"></button>
+        </div>
         <div class="row-three">
-            <div class="words">TEXT</div>
-            <div class="words">TEXT</div>
-            <div class="words">TEXT</div>
-            <div class="words">TEXT</div>
+            <div class="words">this is some subtext under an illustration or image</div>
+            <div class="words">this is some subtext under an illustration or image</div>
+            <div class="words">this is some subtext under an illustration or image</div>
+            <div class="words">this is some subtext under an illustration or image</div>
         </div>
     </div>
     <div class="third">
-        <div class="rows">
-          <div class="top">TEXT</div>
-          <div class="bottom">text</div>
-          </div>
+          <div class="top">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it.  Who knows?  All I know is that it looks nice.</div>
+          <div class="bottom">Thor, God of Thunder</div>
     </div>
     <div class="fourth">
-        <div class="left">
-            <div class="top-text">TEXT</div>
-            <div class="bottom-text">text</div>
-        </div>
-        <div class="right">
-            <a href="signup.html">SIGN UP</a>
+        <div class="rectangle">
+          <div class="left">
+            <div class="top-text">Call to action! It's time!</div>
+            <div class="bottom-text">Sign up for our product by clicking that button right over there!</div>
+          </div>
+          <div class="right">
+            <a href="signup.html">
+                <button>SIGN UP</button>
+            </a>
+          </div>
         </div>
     </div>
     <div class="footer">
-        <div class="only-text">TEXT</div>
+        <div class="only-text">Copyright © Andrew Knight 2025</div>
     </div>
 </body>
 </html>
