Finalize homepage and css framework prior to building landing pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My First Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
     <div class="header">
       <div class="text">Header Logo</div>
       <div class="links">
@@ -34,10 +34,18 @@
           <div class="header">Some Random Information</div>
         </div>
         <div class="row-two">
-            <button class="one"></button>
-            <button class="two"></button>
-            <button class="three"></button>
-            <button class="four"></button>
+            <a href="page-one.html">
+                <button class="one"></button>
+            </a>
+            <a href="page-two.html"> 
+                <button class="two"></button>
+            </a>
+            <a href="page-three.html">
+                <button class="three"></button>
+            </a>
+            <a href="signup.html">
+                <button class="four"></button>
+            </a>
         </div>
         <div class="row-three">
             <div class="words">this is some subtext under an illustration or image</div>
