Change Color Scheme and remove image from div first class and center blocks

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
       <div class="text">Header Logo</div>
       <div class="links">
-        <a href="page-one.html">Link One</a>
-        <a href="page-two.html">Link Two</a>
-        <a href="page-three.html">Link Three</a>
+        <a href="page-one.html">Shop</a>
+        <a href="page-two.html">About</a>
+        <a href="page-three.html">Contact</a>
       </div>
     </div>
     <div class="first">
@@ -23,9 +23,6 @@
                 <a href="signup.html">
                   <button>SIGN UP</button>
                 </a>
-            </div>
-            <div class="right">
-                <img src="images/water.jpg" alt="Fisherman on the Water">
             </div>
         </section>
     </div>
